<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.alumno.mitp_01.MainActivity"
    android:weightSum="1"
    android:scrollbars="vertical">


    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:icon="@mipmap/ic_launcher2"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal|top"
        android:visibility="visible"
        android:background="@mipmap/ic_launcher"
        android:adjustViewBounds="false"
        android:cropToPadding="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoBienvenida"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center"
        android:id="@+id/textBienvenida"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textoSubtitulo2"
        android:layout_gravity="center"
        android:id="@+id/textSubtitulo" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
         <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/nombre"
            android:ems="10"
            android:id="@+id/edNombre" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/apellido"
            android:ems="10"
            android:id="@+id/edApellido" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/usuarioEmail"
            android:ems="10"
            android:id="@+id/edUserEmail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/clave"
            android:ems="10"
            android:id="@+id/edClave" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/rclave"
            android:ems="10"
            android:id="@+id/edConfClave" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="163dp"
            android:layout_height="36dp"
            android:text="@string/btnRegistrarse"
            android:id="@+id/btnRegistrarse"
            android:layout_gravity="center_horizontal|top"
            android:textAllCaps="false"
            android:background="#7bafe8" />

    </LinearLayout>

    </LinearLayout >
    </ScrollView>
</LinearLayout>

