<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.alumno.mitp_01.MainActivity"
    android:weightSum="1">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:icon="@mipmap/ic_launcher2"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal|top"
        android:visibility="visible"
        android:background="@mipmap/ic_launcher"
        android:adjustViewBounds="false"
        android:cropToPadding="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoBienvenida"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center"
        android:id="@+id/textBienvenida"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textoSubtitulo"
        android:layout_gravity="center"
        android:id="@+id/textSubtitulo" />

    <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.alumno.mitp_01.MainActivity"
        android:weightSum="1">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/usuarioEmail"
            android:ems="10"
            android:id="@+id/edUserEmail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text="@string/usuarioClave"
            android:ems="10"
            android:id="@+id/edPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:context="com.example.alumno.mitp_01.MainActivity"
            android:weightSum="1">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkRecor"
                android:id="@+id/checkBox" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>

